Fixes contextual menu icon sizes and alignments

--- a/src/app/core/header/components/sidebar/sidebar.component.scss
+++ b/src/app/core/header/components/sidebar/sidebar.component.scss
@@ -42,12 +42,11 @@ nav {
 }
 
 .bottom {
-
 	color: var(--color-txt-secondary);
 	flex-direction: column;
 	justify-content: space-between;
 	width: 100%;
-	height: 200px;
+	height: 127px;
 
 	notif-app {
 		height: 64px;
