--- a/src/app/features/projects/pages/project-details/components/project-header-details/project-header-details.component.scss
+++ b/src/app/features/projects/pages/project-details/components/project-header-details/project-header-details.component.scss
@@ -14,11 +14,6 @@ header-details-info-app {
 	}
 }
 
-icon-app {
-	font-size: var(--font-size-xxxl);
-	color: var(--color-txt-primary);
-}
-
 .project-name {
 	font-size: var(--font-size-xxl);
 	height: 21px;
